<resources>
    <string name="app_name">Ez Voice Recorder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">By Namnoit</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_quality_title">Recording quality</string>
    <string name="quality_good">High quality (AAC)</string>
    <string name="quality_small">Small size (3GP)</string>
    <string name="ok">OK</string>
    <string name="delete_title">Delete the recording?</string>
    <string name="will_be_deleted">will be deleted</string>
    <string name="menu_quality">Quality</string>
    <string name="menu_share">Share</string>
    <string name="tab_record">Record</string>
    <string name="tab_recordings">Recordings</string>
    <string name="notification_title_recording">Recording…</string>
    <string name="notification_text_recording">Tap to return recording</string>
    <string name="toast_recording_saved">Recording saved</string>
    <string name="error_open_file">Error when open file</string>
    <string name="notification_text_playing">Playing</string>
    <string name="notification_text_paused">Paused</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="file_name">File name</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="file_size">Size</string>
    <string name="duration">Duration</string>
    <string name="format">Format</string>
    <string name="recorded_on">Recorded on</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_version">Version 1.0.0</string>
    <string name="menu_feed_back">Send your feedback</string>
    <string name="my_email">phuongnamtruong.it@gmail.com</string>
    <string name="rename_success">Rename successfully</string>
    <string name="rename_failed">Rename failed: File name is not allowed</string>
    <string name="recording_not_found">Recording not found</string>
    <string name="recording_not_found_message">File was deleted or modified externally</string>
    <string name="delete_failed">Failed to delete file</string>
    <string name="create_directory_failed">Failed to create directory</string>
    <string name="menu_sync_drive">Sync with Google Drive</string>
    <string name="connection_failed">Unable to connect to the Internet</string>
    <string name="toast_permissions_check_failed">Fail to sync. Please allow permission and try again</string>
    <string name="toast_start_recording">Start recording</string>
    <string name="communicate">Communicate</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="notification_text_uploaded">File uploaded</string>
    <string name="notification_text_downloaded">File downloaded</string>
    <string name="drive_line_description">To show if this file is on Google Drive</string>
    <string name="service_channel">Ez Voice Recorder Service</string>
    <string name="alert_channel">Ez Voice Recorder default alert</string>
    <string name="importance_alert_channel">Ez Voice Recorder importance alert</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="switch_account">Switch account</string>
    <string name="not_signed_in">Your are not signed in</string>
    <string name="files_up_to_date">All files are up-to-date</string>
    <string name="sync">Sync now</string>
    <string name="on_drive">On Google Drive</string>
    <string name="sync_in_progress">Sync in progress</string>
    <string name="backup_in_progress">Backup in progress</string>
    <string name="start_time">00:00:00</string>
    <string name="play_recording_button_desc">Play recording button</string>
    <string name="close_recording_button_desc">Close recording button</string>
    <string name="icon_description">Icon</string>
    <string name="toast_recording_paused">Recording paused</string>
    <string name="delete_files_title">Delete selected files?</string>
    <string name="delete_files_message">Are you sure to delete selected files?</string>
    <string name="was_deleted">was deleted</string>
</resources>

