<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quality"
            android:icon="@drawable/ic_music"
            android:title="@string/menu_quality" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_drive"
            android:title="@string/menu_upload_drive" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_playstore"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_feed_back"
                android:icon="@drawable/ic_email"
                android:title="@string/menu_feed_back" />
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/ic_info"
                android:checkable="false"
                android:title="@string/menu_version" />
        </menu>
    </item>

</menu>
