<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@id/image_drive"
        android:text="@string/details"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/details_title"
        android:layout_alignStart="@id/details_title"
        app:srcCompat="@drawable/ic_title"
        android:contentDescription="@string/icon_description" />

    <ImageView
        android:id="@+id/image_details_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/image_details_title"
        android:layout_alignStart="@id/details_title"
        app:srcCompat="@drawable/ic_duration"
        android:contentDescription="@string/icon_description" />

    <ImageView
        android:id="@+id/image_details_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/image_details_duration"
        android:layout_alignStart="@id/details_title"
        app:srcCompat="@drawable/ic_date"
        android:contentDescription="@string/icon_description" />

    <ImageView
        android:id="@+id/image_details_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/image_details_time"
        android:layout_alignStart="@id/details_title"
        app:srcCompat="@drawable/ic_music"
        android:contentDescription="@string/icon_description" />

    <ImageView
        android:id="@+id/image_details_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/image_details_format"
        android:layout_alignStart="@id/details_title"
        app:srcCompat="@drawable/ic_storage"
        android:contentDescription="@string/icon_description" />

    <TextView
        android:id="@+id/text_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_alignBottom="@id/image_details_title"
        android:layout_toEndOf="@id/image_details_title"
        android:maxLines="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_details_title"
        android:layout_toEndOf="@id/image_details_title"
        android:text="@string/file_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_details_file_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_details_capacity"
        android:layout_toEndOf="@id/image_details_capacity"
        android:text="@string/file_size"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_details_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_alignBottom="@id/image_details_capacity"
        android:layout_toEndOf="@id/image_details_capacity"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_details_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_alignBottom="@id/image_details_duration"
        android:layout_toEndOf="@id/image_details_duration"
        android:maxLines="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_details_file_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_details_duration"
        android:layout_toEndOf="@id/image_details_duration"
        android:text="@string/duration"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_details_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_alignBottom="@id/image_details_time"
        android:layout_toEndOf="@id/image_details_time"
        android:maxLines="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_details_file_name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_details_time"
        android:layout_toEndOf="@id/image_details_time"
        android:text="@string/recorded_on"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_details_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_alignBottom="@id/image_details_format"
        android:layout_toEndOf="@id/image_details_format"
        android:maxLines="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_details_file_name5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_details_format"
        android:layout_toEndOf="@id/image_details_format"
        android:text="@string/format"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/image_drive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_toStartOf="@id/image_local"
        android:scaleY="0.5"
        android:scaleX="0.5"
        app:srcCompat="@drawable/drive"
        android:contentDescription="@string/icon_description" />

    <ImageView
        android:id="@+id/image_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_phone"
        android:contentDescription="@string/icon_description" />
</RelativeLayout>
